# alpina-intelligence

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  biome.json  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  package.json  tsconfig.json
.claude/: settings.json
.github/workflows/: deploy-alpina-site.yml  deploy-infra.yml  deploy-puck-prophet.yml  deploy-underscore-backend.yml  deploy-underscore-frontend.yml
docs/: FRONTEND_STANDARDS.md  PROJECT_SETUP.md
infra/: README.md  bootstrap-vps.sh  docker-compose.yml  ensure-databases.sql
projects/: underscore_scaffold_todo.md
projects/alpina-site/: .cta.json  .dockerignore  .env.example  Dockerfile  biome.json  package.json  tsconfig.json  vite.config.ts
projects/biscuit-boss/: README.md  package.json  tsconfig.json  vite.config.ts
projects/blog/: .cta.json  .env.example  TESTING.md  drizzle.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/blog-old/: package.json  tsconfig.json  vite.config.ts
projects/puck-prophet/: .cta.json  .env.example  Dockerfile  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
projects/underscore/annotator/: pyproject.toml
projects/underscore/annotator/annotator/: bake_off.py  client.py  prompts.py  schema.py
projects/underscore/annotator/tests/: test_smoke.py
projects/unified-data-platform/: main.py  pyproject.toml
projects/unified-data-platform/notebooks/: spark_test.py  sparktest.ipynb
scripts/: deploy-infra.sh  init-databases.sql
(+220 files in other folders)
