[project]
name = "unified-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "delta-spark>=4.0.0,<4.1.0",
    "mlflow>=3.8.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyspark>=4.0.0,<4.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pytest>=9.0.2",
]
