[project]
name = "underscore-annotator"
version = "0.1.0"
description = "Music-conditioning annotation pipeline for the Underscore e-reader"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.15.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["annotator"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
